--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # General Jekyll Config
 highlighter: pygments
-url: http://pradyumnac.github.io/lagon
+url: https://pradyumnac.github.io/lagom/
 lsi: false
 exclude: [LICENSE, CNAME, README.md, .gitignore, Gemfile, Gemfile.lock]
