--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -24,7 +24,7 @@ email: pady92[@]gmail[dot]com
 tagline: "with minds let loose!"
 
 # Google Analytics key, leave blank to ignore
-google_analytics_key: UA-xxxx-x
+google_analytics_key: UA-102177899-3
 
 # Toggle "Postings are my own" disclaimer in footer
 show_disclaimer: true
